--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light">
+    <nav class="navbar vp-450 navbar-expand-md navbar-light">
         <button type="button" class="navbar-toggler ml-auto mb-2"
         data-toggle="collapse" data-target="#myNav">
         <span class="navbar-toggler-icon"></span>
@@ -159,7 +159,7 @@
     </div>
     
     <!-- end of modal -->
-    <div class="container-fluid">
+    <div class="container-fluid vp-450">
         <div class="row">
             <div class="col-lg-9 col-md-8 ml-auto">
                 <div class="row mt-md-5 pt-md-5">
@@ -253,7 +253,7 @@
     <!--end of cards -->
 
     <!-- tables -->
-    <section>
+    <section vp-450>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-9 col-md-8 ml-auto">
@@ -454,7 +454,7 @@
     <!--end of tables -->
 
     <!-- Progress -->
-    <section>
+    <section vp-450>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-9 col-md-8 ml-auto">
@@ -496,7 +496,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-xl-6">
+                        <div class="col-12 col-sm-12 col-xl-6">
                             <h4 class="text-info mb-3">Tasks</h4>
                             <div class="container-fluid">
                                 <div class="row bg-white py-3 mb-3 task-border align-items-center">
@@ -587,10 +587,10 @@
     <!--end of progress -->
 
     <!-- activities / quickpost -->
-    <section>
+    <section vp-450>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-9 col-md-8 ml-auto">
+                <div class="col-lg-9 col-md-8 col-sm-12  ml-auto">
                    <div class="row align-items-center mb-4">
                     <div class="col-xl-7">
                         <h4 class="text-info mb-4">Recent Student Activities</h4>
@@ -741,7 +741,7 @@
 
 
     <!-- footer -->
-    <footer>
+    <footer vp-450>
         <div class="container">
             <div class="row">
                 <div class="col-lg-9 col-md-8 ml-auto">
